# pdf_home

./: Cargo.toml  README.md
db/: db
migrations/2021-03-16-044311_create_tables/: down.sql  up.sql
src/: main.rs
src/components/: entities.rs  routes.rs
src/db/: mod.rs  model.rs  schema.rs
src/web/: index.html
src/web/css/: app.50b127be.css  app.80068242.css  app.b175e50d.css  app.d5e615e6.css  chunk-vendors.a2a94ce8.css  tailwind-experimental.min.css
src/web/js/: app.204db532.js  app.204db532.js.map  app.24546eb4.js  app.24546eb4.js.map  app.c09a166d.js  app.c09a166d.js.map  app.d106c4c3.js  app.d106c4c3.js.map  chunk-vendors.625fc864.js  chunk-vendors.6e7379ef.js  chunk-vendors.785d504e.js  chunk-vendors.ac010227.js
web-view/: Cargo.toml
webapp/: package-lock.json  package.json  vue.config.js
webapp/public/: index.html
webapp/public/css/: utilities.min.css
webapp/src/: App.bak.vue  App.vue  main.js  routes.js
webapp/src/components/: DashboardGroupItem.vue  GroupItem.vue  Sidebar.vue
webapp/src/views/: Contents.vue  Dashboard.vue  Download.vue  Groups.vue  History.vue  Users.vue
