[package]
name = "pdf_home"
version = "0.3.0"
authors = ["Sungjoon Kim <ted@bitflow.ai>"]
readme = "README.md"
license = "GPL3"
repository = "https://github.com/bitflow-inc/pdf_home"
description = "Rust bindings for webview, a tiny cross-platform library to render web-based GUIs for desktop applications"
keywords = ["yolo", "label", "labelimg", "yololabel", "deep learning"]
categories = ["gui", "web-programming", "api-bindings", "rendering", "visualization"]
exclude = []
edition = "2018"

[dependencies]
web-view = { path = "web-view", version = "0.7.3", features = ["edge"] }
webview-sys = { path = "webview-sys", version = "0.6.2" }
diesel = { version = "^1.1.0", features = ["sqlite","chrono","serde_json", "r2d2"] }
dotenv = "0.15.0"
actix-web = "3"
actix-rt = "0.2"
actix-form-data = "0.5"
actix-multipart = "0.2"
futures = "0.3.1"
mime_guess = "2.0.1"
rust-embed = "5.9.0"
sanitize-filename = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
urlencoding = "1.0"
boxfnonce = "0.1"
tinyfiledialogs = "3.3.9"
image = "0.23.13"
jammdb = "0.4.0"

[features]
#edge = ["webview-sys/edge"]

[dev-dependencies]
grep = "0.2.4"
walkdir = "2.3.1"

[workspace]
members = [
    "web-view",
    "webview-sys",
]